--- a/components/body.css
+++ b/components/body.css
@@ -1,6 +1,6 @@
 body {
     align-items: center;
-    background-color: var(--white);
+    background-color: var(--orange);
     background: url("img.jpg");
     background-attachment: fixed;
     background-position: center;
