--- a/components/link.css
+++ b/components/link.css
@@ -1,5 +1,5 @@
 .link {
-    color: var(--brown);
+    color: whitesmoke;
     font-size: 0.9rem;
     margin: 1.5rem 0;
     text-decoration: none;
